--- a/recotech-frontend-master/src/assets/styles/components/_menu-item.css
+++ b/recotech-frontend-master/src/assets/styles/components/_menu-item.css
@@ -45,7 +45,7 @@
     }
 
     &.menu-item-active {
-      @apply text-gray-900 dark:text-gray-100 bg-gray-900/[.075] dark:bg-white/[.1];
+      @apply text-gray-900 dark:text-gray-100 bg-orange-600/[.40] dark:bg-white/[.1];
     }
   }
 }
